--- a/Source/DataCleaning.ipynb
+++ b/Source/DataCleaning.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,7 @@
     "            data[cols]=preProcessColumn(data[cols],fillna=fillna,removeNumbers=removeNumbers,removeSpecialCharacters=removeSpecialCharacters,handleCamelCase=handleCamelCase,\n",
     "                                       removeMailids=removeMailids,removeUrls=removeUrls)\n",
     "            if(removeStopwords):\n",
+    "                data[cols]=data[cols].astype(str).str.lower()\n",
     "                data[cols]=removeStopwordsFunc(data[cols],customStopWords=customStopWords)\n",
     "        \n",
     "            \n",
@@ -196,7 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test['tweet_without_stopwords'] = test['tweet'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +224,8 @@
     "#     for w in word_tokens: \n",
     "#         if w not in stop_words: \n",
     "#             filtered_sentence.append(w) \n",
-    "    data = data.map(lambda a:(\" \".join(i for i in a  if i.lower() not in stop_words)))\n",
+    "    data = data.apply(lambda x: ' '.join([word for word in x if word not in (stop_words)]))\n",
+    "#     map(lambda a:(\" \".join(i for i in a  if i.lower() not in stop_words)))\n",
     "    \n",
     "    return(data)"
    ]
@@ -250,18 +261,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nltk' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-6d6d46854984>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#lemmatize the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWordNetLemmatizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mw_tokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWhitespaceTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mlemmatizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWordNetLemmatizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlemmatize_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nltk' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#lemmatize the data\n",
     "from nltk.stem import WordNetLemmatizer \n",
     "w_tokenizer = nltk.tokenize.WhitespaceTokenizer()\n",
     "lemmatizer = WordNetLemmatizer() \n",
     "def lemmatize_text(text):\n",
-    "    return [lemmatizer.lemmatize(w) for w in w_tokenizer.tokenize(text)]"
+    "    return (lemmatizer.lemmatize(w) for w in w_tokenizer.tokenize(text))"
    ]
   },
   {
